Added all the content

--- a/index.html
+++ b/index.html
@@ -11,5 +11,30 @@
 </head>
 <body>
 
+  Beau's Bonbons
+  About Us
+  Location
+  Contact
+
+  About Us
+  For all your local confectionary needs, come to Beau’s Bonbons. Where it be sweet or salty, we’re sure to have what you’re looking for. We have a wide variety of candies to choose from, and hear are just a few we have here.
+
+  Location
+  We are located at the heart downtown Ottawa at the corner of Elgin and Bank. OC transpo stop is close by and we are within walking distance of the Rideau Center.
+
+  Contact
+  Address: 298 Elgin St
+  Phone: 613-xxx-xxxx
+
+  Want to send us a message?
+  Fill out the fields below
+
+  Name:
+  Email:
+  Topic:
+  Comments:
+
+  Beau's Bonbons 2016
+
 </body>
 </html>
