Started creating nav

--- a/index.html
+++ b/index.html
@@ -11,10 +11,23 @@
 </head>
 <body>
 
-  Beau's Bonbons
-  About Us
-  Location
-  Contact
+  <ul class="skip-links">
+    <li><a href="#main">Jump to main content</a></li>
+    <li><a href="#nav">Jump to navigation</a></li>
+  </ul>
+
+  <header>
+    <div class="masthead">
+      <h1>Beau's Bonbons</h1>
+      <nav role="navigation" id="nav">
+        <ul class="list-group-inline">
+          <li><a href="#about">About Us</a></li>
+          <li><a href="#location">Location</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
   About Us
   For all your local confectionary needs, come to Beau’s Bonbons. Where it be sweet or salty, we’re sure to have what you’re looking for. We have a wide variety of candies to choose from, and hear are just a few we have here.
