--- a/index.html
+++ b/index.html
@@ -29,25 +29,45 @@
     </div>
   </header>
 
-  About Us
-  For all your local confectionary needs, come to Beau’s Bonbons. Where it be sweet or salty, we’re sure to have what you’re looking for. We have a wide variety of candies to choose from, and hear are just a few we have here.
+  <main role="main" id="main">
+    <h2>About Us</h2>
+    <p>For all your local confectionary needs, come to Beau’s Bonbons. Where it be sweet or salty, we’re sure to have what you’re looking for. We have a wide variety of candies to choose from, and hear are just a few we have here.</p>
 
-  Location
-  We are located at the heart downtown Ottawa at the corner of Elgin and Bank. OC transpo stop is close by and we are within walking distance of the Rideau Center.
+    <h2>Location</h2>
+    <p>We are located at the heart downtown Ottawa at the corner of Elgin and Bank. OC transpo stop is close by and we are within walking distance of the Rideau Center.</p>
 
-  Contact
-  Address: 298 Elgin St
-  Phone: 613-xxx-xxxx
+    <section>
+      <h2>Contact</h2>
+      Address: 298 Elgin St
+      Phone: 613-xxx-xxxx
 
-  Want to send us a message?
-  Fill out the fields below
+      Want to send us a message?
+      Fill out the fields below
 
-  Name:
-  Email:
-  Topic:
-  Comments:
+      <form method="POST" action="https://formspree.io/doug0139@algonquinlive.com">
+        <div>
+          Name:
+        </div>
+        <div>
+          Email:
+        </div>
+        <div>
+          Topic:
+          General
+          Allergens
+          Careers
+          Other
+        </div>
+        <div>
+          Comments:
+        </div>
+      </form>
+    </section>
+  </main>
 
-  Beau's Bonbons 2016
+  <footer>
+    <p>© Beau's Bonbons 2016<p>
+  </footer>
 
 </body>
 </html>
