Added colouring to header

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </ul>
 
   <header>
-    <div class="masthead">
+    <div class="masthead wrapper pad-t-1-2 gutter-1-2">
       <h1>Beau's Bonbons</h1>
       <nav role="navigation" id="nav">
         <ul class="list-group-inline">
@@ -39,23 +39,23 @@
 
     <section>
       <h2>Contact</h2>
-      <p>Address: 298 Elgin St
-      <br>Phone: 613-xxx-xxxx
-      <br>Hours: Monday to Saturday 9AM - 9PM, Sunday 11AM - 5PM</p>
+      <p class="push-2"><b>Address:</b> 298 Elgin St, Ottawa, ON
+      <br><b>Phone:</b> 613-xxx-xxxx
+      <br><b>Hours:</b> Monday to Saturday 9AM - 9PM, Sunday 11AM - 5PM</p>
 
       <h3>Want to send us a message?</h3>
       <p>Fill out the fields below</p>
 
       <form method="POST" action="https://formspree.io/doug0139@algonquinlive.com">
-        <div>
+        <div class="push">
           <label for="name">Name:</label>
           <input id="name">
         </div>
-        <div>
+        <div class="push">
           <label for="email">Email:</label>
           <input id="email" type="email">
         </div>
-        <div>
+        <div class="push">
           <label for="topic">Topic:</label>
           <select id="topic">
             <option>General</option>
@@ -64,7 +64,7 @@
             <option>Other</option>
           </select>
         </div>
-        <div>
+        <div class="push">
           <label for="comments">Comments:</label>
           <textarea id="comments"></textarea>
         </div>
