--- a/index.html
+++ b/index.html
@@ -18,61 +18,67 @@
   </ul>
 
   <header>
-    <div class="masthead wrapper pad-t-1-2 gutter-1-2">
-      <h1>Beau's Bonbons</h1>
+    <div class="masthead wrapper pad-t-1-2">
+      <h1 class="gutter-1-2 push-1-2">Beau's Bonbons</h1>
       <nav role="navigation" id="nav">
-        <ul class="list-group-inline">
-          <li><a href="#about">About Us</a></li>
-          <li><a href="#location">Location</a></li>
-          <li><a href="#contact">Contact</a></li>
+        <ul class="nav list-group-inline">
+          <li class="island-1-2"><a href="#about">About Us</a></li>
+          <li class="island-1-2"><a href="#location">Location</a></li>
+          <li class="island-1-2"><a href="#contact">Contact</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
   <main role="main" id="main">
-    <h2>About Us</h2>
-    <p>For all your local confectionary needs, come to Beau’s Bonbons. Where it be sweet or salty, we’re sure to have what you’re looking for. We have a wide variety of candies to choose from, and hear are just a few we have here.</p>
+    <div class="masthead wrapper gutter-1-2">
+      <section id="about">
+        <h2>About Us</h2>
+        <p>For all your local confectionary needs, come to Beau’s Bonbons. Where it be sweet or salty, we’re sure to have what you’re looking for. We have a wide variety of candies to choose from, and hear are just a few we have here.</p>
+      </section>
 
-    <h2>Location</h2>
-    <p>We are located at the heart downtown Ottawa at the corner of Elgin and Bank. OC transpo stop is close by and we are within walking distance of the Rideau Center.</p>
+      <section id="location">
+        <h2>Location</h2>
+        <p>We are located at the heart downtown Ottawa at the corner of Elgin and Bank. OC transpo stop is close by and we are within walking distance of the Rideau Center.</p>
+      </section>
 
-    <section>
-      <h2>Contact</h2>
-      <p class="push-2"><b>Address:</b> 298 Elgin St, Ottawa, ON
-      <br><b>Phone:</b> 613-xxx-xxxx
-      <br><b>Hours:</b> Monday to Saturday 9AM - 9PM, Sunday 11AM - 5PM</p>
+      <section id="contact">
+        <h2>Contact</h2>
+        <p class="push-2"><b>Address:</b> 298 Elgin St, Ottawa, ON
+        <br><b>Phone:</b> 613-xxx-xxxx
+        <br><b>Hours:</b> Monday to Saturday 9AM - 9PM, Sunday 11AM - 5PM</p>
 
-      <h3>Want to send us a message?</h3>
-      <p>Fill out the fields below</p>
+        <h3>Want to send us a message?</h3>
+        <p>Fill out the fields below</p>
 
-      <form method="POST" action="https://formspree.io/doug0139@algonquinlive.com">
-        <div class="push">
-          <label for="name">Name:</label>
-          <input id="name">
-        </div>
-        <div class="push">
-          <label for="email">Email:</label>
-          <input id="email" type="email">
-        </div>
-        <div class="push">
-          <label for="topic">Topic:</label>
-          <select id="topic">
-            <option>General</option>
-            <option>Allergens</option>
-            <option>Careers</option>
-            <option>Other</option>
-          </select>
-        </div>
-        <div class="push">
-          <label for="comments">Comments:</label>
-          <textarea id="comments"></textarea>
-        </div>
-      </form>
-    </section>
+        <form method="POST" action="https://formspree.io/doug0139@algonquinlive.com">
+          <div class="push">
+            <label for="name">Name:</label>
+            <input id="name">
+          </div>
+          <div class="push">
+            <label for="email">Email:</label>
+            <input id="email" type="email">
+          </div>
+          <div class="push">
+            <label for="topic">Topic:</label>
+            <select id="topic">
+              <option>General</option>
+              <option>Allergens</option>
+              <option>Careers</option>
+              <option>Other</option>
+            </select>
+          </div>
+          <div class="push">
+            <label for="comments">Comments:</label>
+            <textarea id="comments"></textarea>
+          </div>
+        </form>
+      </section>
+    </div>
   </main>
 
-  <footer>
+  <footer role="contentinfo">
     <p>© Beau's Bonbons 2016<p>
   </footer>
 
