Styled button and footer

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </header>
 
   <main role="main" id="main">
-    <div class="masthead wrapper gutter-1-2">
+    <div class="wrapper gutter-1-2">
       <section id="about">
         <h2>About Us</h2>
         <p>For all your local confectionary needs, come to Beau’s Bonbons. Where it be sweet or salty, we’re sure to have what you’re looking for. We have a wide variety of candies to choose from, and hear are just a few we have here.</p>
@@ -73,13 +73,18 @@
             <label for="comments">Comments:</label>
             <textarea id="comments"></textarea>
           </div>
+          <div class="unit unit-content-distribute unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 push">
+            <button class="btn content-shrink island-1-2 gutter" type="submit">Send</button>
+          </div>
         </form>
       </section>
     </div>
   </main>
 
-  <footer role="contentinfo">
-    <p>© Beau's Bonbons 2016<p>
+  <footer role="contentinfo" class="island-1-2">
+    <div class="wrapper">
+      <p class="push-0">© Beau's Bonbons 2016</p>
+    </div>
   </footer>
 
 </body>
