--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="masthead wrapper pad-t-1-2">
       <h1 class="gutter-1-2 push-1-2">Beau's Bonbons</h1>
       <nav role="navigation" id="nav">
-        <ul class="nav list-group-inline">
+        <ul class="nav list-group-inline push-0">
           <li class="island-1-2"><a href="#about">About Us</a></li>
           <li class="island-1-2"><a href="#location">Location</a></li>
           <li class="island-1-2"><a href="#contact">Contact</a></li>
@@ -34,7 +34,7 @@
     <div class="wrapper gutter-1-2">
       <section id="about">
         <h2>About Us</h2>
-        <p>For all your local confectionary needs, come to Beau’s Bonbons. Where it be sweet or salty, we’re sure to have what you’re looking for. We have a wide variety of candies to choose from, and hear are just a few we have here.</p>
+        <p>For all your local confectionary needs, come to Beau’s Bonbons. Where it be sweet or salty, we’re sure to have what you’re looking for. We have a wide variety of candies to choose from, and here are just a few we have.</p>
       </section>
 
       <section id="location">
