--- a/index.html
+++ b/index.html
@@ -31,36 +31,40 @@
   </header>
 
   <main role="main" id="main">
-    <div class="wrapper gutter-1-2">
-      <section id="about">
+    <div class="wrapper">
+      <section  class="gutter-1-2" id="about">
         <h2>About Us</h2>
         <p>For all your local confectionary needs, come to Beau’s Bonbons. Where it be sweet or salty, we’re sure to have what you’re looking for. We have a wide variety of candies to choose from, and here are just a few we have.</p>
       </section>
 
-      <section id="location">
+      <section class="gutter-1-2" id="location">
         <h2>Location</h2>
         <p>We are located at the heart downtown Ottawa at the corner of Elgin and Bank. OC transpo stop is close by and we are within walking distance of the Rideau Center.</p>
       </section>
 
       <section id="contact">
-        <h2>Contact</h2>
-        <p class="push-2"><b>Address:</b> 298 Elgin St, Ottawa, ON
-        <br><b>Phone:</b> 613-xxx-xxxx
-        <br><b>Hours:</b> Monday to Saturday 9AM - 9PM, Sunday 11AM - 5PM</p>
+        <div class="gutter-1-2">
+          <h2>Contact</h2>
+          <p class="push-2"><b>Address:</b> 298 Elgin St, Ottawa, ON
+          <br><b>Phone:</b> 613-xxx-xxxx
+          <br><b>Hours:</b> Monday to Saturday 9AM - 9PM, Sunday 11AM - 5PM</p>
+        </div>
 
-        <h3>Want to send us a message?</h3>
-        <p>Fill out the fields below</p>
+        <div class="gutter-1-2">
+          <h3>Want to send us a message?</h3>
+          <p>Fill out the fields below</p>
+        </div>
 
-        <form method="POST" action="https://formspree.io/doug0139@algonquinlive.com">
-          <div class="push">
+        <form class="grid" method="POST" action="https://formspree.io/doug0139@algonquinlive.com">
+          <div class="unit [ unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 unit-xl-1-2 ] push gutter-1-2">
             <label for="name">Name:</label>
             <input id="name">
           </div>
-          <div class="push">
+          <div class="unit [ unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 unit-xl-1-2 ] push gutter-1-2">
             <label for="email">Email:</label>
             <input id="email" type="email">
           </div>
-          <div class="push">
+          <div class="unit [ unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 ] push gutter-1-2">
             <label for="topic">Topic:</label>
             <select id="topic">
               <option>General</option>
@@ -69,11 +73,11 @@
               <option>Other</option>
             </select>
           </div>
-          <div class="push">
+          <div class="unit [ unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 ] push gutter-1-2">
             <label for="comments">Comments:</label>
             <textarea id="comments"></textarea>
           </div>
-          <div class="unit unit-content-distribute unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 push">
+          <div class="unit unit-content-distribute [ unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 ] push">
             <button class="btn content-shrink island-1-2 gutter" type="submit">Send</button>
           </div>
         </form>
