--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 
   <header>
     <div class="masthead wrapper pad-t-1-2">
-      <h1 class="gutter-1-2 push-1-2">Beau's Bonbons</h1>
+      <div class="gutter-1-2">
+        <img class="logo valign-middle" src="images/candy-1.svg" alt="">
+        <h1 class="ib valign-middle push-0 gutter-1-2">Beau's Bonbons</h1>
+        <img class="logo valign-middle" src="images/candy-1.svg" alt="">
+      </div>
       <nav role="navigation" id="nav">
         <ul class="nav list-group-inline push-0">
           <li class="island-1-2"><a href="#about">About Us</a></li>
@@ -56,15 +60,15 @@
         </div>
 
         <form class="grid" method="POST" action="https://formspree.io/doug0139@algonquinlive.com">
-          <div class="unit [ unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 unit-xl-1-2 ] push gutter-1-2">
+          <div class="unit [ unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 unit-xl-1-3 ] push gutter-1-2">
             <label for="name">Name:</label>
             <input id="name">
           </div>
-          <div class="unit [ unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 unit-xl-1-2 ] push gutter-1-2">
+          <div class="unit [ unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 unit-xl-1-3 ] push gutter-1-2">
             <label for="email">Email:</label>
             <input id="email" type="email">
           </div>
-          <div class="unit [ unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 ] push gutter-1-2">
+          <div class="unit [ unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3 unit-xl-1-3 ] push gutter-1-2">
             <label for="topic">Topic:</label>
             <select id="topic">
               <option>General</option>
