Added banner image

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
   </header>
 
   <main role="main" id="main">
-    <div class="wrapper">
+    <div class="wrapper embed">
+      <img class="embed-item embed-16by9 static push-1-2 pad-t-0" src="images/store.jpg" alt="" ariadescribedat="#about">
       <section  class="gutter-1-2" id="about">
         <h2>About Us</h2>
         <p>For all your local confectionary needs, come to Beau’s Bonbons. Where it be sweet or salty, we’re sure to have what you’re looking for. We have a wide variety of candies to choose from, and here are just a few we have.</p>
