Optimizing for screen sizes

--- a/index.html
+++ b/index.html
@@ -17,30 +17,40 @@
     <li><a href="#nav">Jump to navigation</a></li>
   </ul>
 
-  <header>
-    <div class="masthead wrapper pad-t-1-2">
-      <div class="gutter-1-2">
+  <header role="banner">
+    <div class="masthead wrapper grid">
+      <div class="gutter-1-2 unit [ unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-2 ]">
         <img class="logo valign-middle" src="images/candy-1.svg" alt="">
         <h1 class="ib valign-middle push-0 gutter-1-2">Beau's Bonbons</h1>
         <img class="logo valign-middle" src="images/candy-1.svg" alt="">
       </div>
-      <nav role="navigation" id="nav">
-        <ul class="nav list-group-inline push-0">
-          <li class="island-1-2"><a href="#about">About Us</a></li>
-          <li class="island-1-2"><a href="#location">Location</a></li>
-          <li class="island-1-2"><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
+      <div class="unit [ unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-2 ] valign-middle">
+        <nav role="navigation" id="nav">
+          <div class="nav wrapper">
+            <ul class="list-group-inline push-0 pad-b-1-4">
+              <li class="island-1-2"><a href="#about">About Us</a></li>
+              <li class="island-1-2"><a href="#location">Location</a></li>
+              <li class="island-1-2"><a href="#contact">Contact</a></li>
+            </ul>
+          </div>
+        </nav>
+      </div>
     </div>
   </header>
 
   <main role="main" id="main">
     <div class="wrapper embed">
-      <img class="embed-item embed-16by9 static push-1-2 pad-t-0" src="images/store.jpg" alt="" ariadescribedat="#about">
+      <img class="embed-item embed-16by9 static push-1-2" src="images/store.jpg" alt="" ariadescribedat="#about">
       <section  class="gutter-1-2" id="about">
         <h2>About Us</h2>
         <p>For all your local confectionary needs, come to Beau’s Bonbons. Where it be sweet or salty, we’re sure to have what you’re looking for. We have a wide variety of candies to choose from, and here are just a few we have.</p>
       </section>
+
+      <div class="embed grid ">
+        <img class="embed-item embed-16by9 static unit [ unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3 unit-xl-1-3 ]" src="images/candy-2.jpg" alt="">
+        <img class="embed-item embed-16by9 static unit [ unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 unit-xl-1-3 ]" src="images/candy-3.jpg" alt="">
+        <img class="embed-item embed-16by9 static unit [ unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 unit-xl-1-3 ]" src="images/candy-4.jpg" alt="">
+      </div>
 
       <section class="gutter-1-2" id="location">
         <h2>Location</h2>
