--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       </section>
 
       <div class="embed grid ">
-        <img class="embed-item embed-16by9 static unit [ unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3 unit-xl-1-3 ]" src="images/candy-2.jpg" alt="">
-        <img class="embed-item embed-16by9 static unit [ unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 unit-xl-1-3 ]" src="images/candy-3.jpg" alt="">
-        <img class="embed-item embed-16by9 static unit [ unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 unit-xl-1-3 ]" src="images/candy-4.jpg" alt="">
+        <img class="embed-item embed-16by9 static unit [ unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3 unit-xl-1-3 ]" src="images/candy-2.jpg" alt="" ariadescribedat="#location">
+        <img class="embed-item embed-16by9 static unit [ unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 unit-xl-1-3 ]" src="images/candy-3.jpg" alt="" ariadescribedat="#location">
+        <img class="embed-item embed-16by9 static unit [ unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 unit-xl-1-3 ]" src="images/candy-4.jpg" alt="" ariadescribedat="#location">
       </div>
 
       <section class="gutter-1-2" id="location">
