--- a/index.html
+++ b/index.html
@@ -39,23 +39,33 @@
   </header>
 
   <main role="main" id="main">
-    <div class="wrapper embed">
-      <img class="embed-item embed-16by9 static push-1-2" src="images/store.jpg" alt="" ariadescribedat="#about">
+    <div class="wrapper embed embed-16by9">
+      <img class="embed-item static push-1-2" src="images/store.jpg" alt="" ariadescribedat="#about">
       <section  class="gutter-1-2" id="about">
         <h2>About Us</h2>
         <p>For all your local confectionary needs, come to Beau’s Bonbons. Where it be sweet or salty, we’re sure to have what you’re looking for. We have a wide variety of candies to choose from, and here are just a few we have.</p>
       </section>
 
-      <div class="embed grid">
-        <img class="embed-item embed-16by9 static unit [ unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3 unit-xl-1-3 ]" src="images/candy-2.jpg" alt="" ariadescribedat="#location">
-        <img class="embed-item embed-16by9 static unit [ unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 unit-xl-1-3 ]" src="images/candy-3.jpg" alt="" ariadescribedat="#location">
-        <img class="embed-item embed-16by9 static unit [ unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 unit-xl-1-3 ]" src="images/candy-4.jpg" alt="" ariadescribedat="#location">
-      </div>
+      <figure class="grid">
+        <div class="embed embed-16by9 unit [ unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3 unit-xl-1-3 ]">
+          <img class="embed-item static" src="images/candy-2.jpg" alt="" ariadescribedat="#location">
+        </div>
+        <div class="embed embed-16by9 unit [ unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 unit-xl-1-3 ]">
+          <img class="embed-item static" src="images/candy-3.jpg" alt="" ariadescribedat="#location">
+        </div>
+        <div class="embed embed-16by9 unit [ unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 unit-xl-1-3 ]">
+          <img class="embed-item static" src="images/candy-4.jpg" alt="" ariadescribedat="#location">
+        </div>
+      </figure>
 
       <section class="gutter-1-2" id="location">
         <h2>Location</h2>
         <p>We are located at the heart downtown Ottawa at the corner of Elgin and Bank. OC transpo stop is close by and we are within walking distance of the Rideau Center.</p>
       </section>
+
+      <div class="embed embed-16by9">
+        <img class="embed-item static push-1-2" src="images/owner.jpg" alt="" ariadescribedat="#about">
+      </div>
 
       <section id="contact">
         <div class="gutter-1-2">
