--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <main role="main" id="main">
     <div class="wrapper embed embed-16by9">
-      <img class="embed-item static push-1-2" src="images/store.jpg" alt="" ariadescribedat="#about">
+      <img class="embed-item static push-1-2" src="images/store.jpg" alt="Picture of store's candy displays">
       <section  class="gutter-1-2" id="about">
         <h2>About Us</h2>
         <p>For all your local confectionary needs, come to Beau’s Bonbons. Where it be sweet or salty, we’re sure to have what you’re looking for. We have a wide variety of candies to choose from, and here are just a few we have.</p>
@@ -48,13 +48,13 @@
 
       <figure class="grid">
         <div class="embed embed-16by9 unit [ unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3 unit-xl-1-3 ]">
-          <img class="embed-item static" src="images/candy-2.jpg" alt="" ariadescribedat="#location">
+          <img class="embed-item static" src="images/candy-2.jpg" alt="Picture of gummy worms">
         </div>
         <div class="embed embed-16by9 unit [ unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 unit-xl-1-3 ]">
-          <img class="embed-item static" src="images/candy-3.jpg" alt="" ariadescribedat="#location">
+          <img class="embed-item static" src="images/candy-3.jpg" alt="Picture of candy stars">
         </div>
         <div class="embed embed-16by9 unit [ unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 unit-xl-1-3 ]">
-          <img class="embed-item static" src="images/candy-4.jpg" alt="" ariadescribedat="#location">
+          <img class="embed-item static" src="images/candy-4.jpg" alt="Picture of gum drops">
         </div>
       </figure>
 
@@ -64,7 +64,7 @@
       </section>
 
       <div class="embed embed-16by9">
-        <img class="embed-item static push-1-2" src="images/owner.jpg" alt="" ariadescribedat="#about">
+        <img class="embed-item static push-1-2" src="images/owner.jpg" alt="Picture of owner">
       </div>
 
       <section id="contact">
