--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <div class="masthead wrapper grid">
       <div class="gutter-1-2 unit [ unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-2 ]">
         <img class="logo valign-middle" src="images/candy-1.svg" alt="">
-        <h1 class="ib valign-middle push-0 gutter-1-2">Beau's Bonbons</h1>
+        <h1 class="ib valign-middle push-0 gutter-1-2 exa">Beau's Bonbons</h1>
         <img class="logo valign-middle" src="images/candy-1.svg" alt="">
       </div>
       <div class="unit [ unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-2 ] valign-middle">
         <nav role="navigation" id="nav">
           <div class="nav wrapper">
-            <ul class="list-group-inline push-0 pad-b-1-4">
+            <ul class="list-group-inline push-0 pad-b-1-8 pad-t-1-8">
               <li class="island-1-2"><a href="#about">About Us</a></li>
               <li class="island-1-2"><a href="#location">Location</a></li>
               <li class="island-1-2"><a href="#contact">Contact</a></li>
@@ -38,12 +38,12 @@
     </div>
   </header>
 
-  <main role="main" id="main">
+  <main class="wrapper" role="main" id="main">
     <div class="wrapper embed embed-16by9">
       <img class="embed-item static push-1-2" src="images/store.jpg" alt="Picture of store's candy displays">
       <section  class="gutter-1-2" id="about">
-        <h2>About Us</h2>
-        <p>For all your local confectionary needs, come to Beau’s Bonbons. Where it be sweet or salty, we’re sure to have what you’re looking for. We have a wide variety of candies to choose from, and here are just a few we have.</p>
+        <h2 class="peta">About Us</h2>
+        <p class="kilo">For all your local confectionary needs, come to Beau’s Bonbons. Where it be sweet or salty, we’re sure to have what you’re looking for. We have a wide variety of candies to choose from, and here are just a few we have.</p>
       </section>
 
       <figure class="grid">
@@ -59,8 +59,8 @@
       </figure>
 
       <section class="gutter-1-2" id="location">
-        <h2>Location</h2>
-        <p>We are located at the heart downtown Ottawa at the corner of Elgin and Bank. OC transpo stop is close by and we are within walking distance of the Rideau Center.</p>
+        <h2 class="peta">Location</h2>
+        <p class="kilo">We are located at the heart downtown Ottawa at the corner of Elgin and Bank. OC transpo stop is close by and we are within walking distance of the Rideau Center.</p>
       </section>
 
       <div class="embed embed-16by9">
@@ -69,15 +69,15 @@
 
       <section id="contact">
         <div class="gutter-1-2">
-          <h2>Contact</h2>
-          <p class="push-2"><b>Address:</b> 298 Elgin St, Ottawa, ON
+          <h2 class="peta">Contact</h2>
+          <p class="push-2 kilo"><b>Address:</b> 298 Elgin St, Ottawa, ON
           <br><b>Phone:</b> 613-xxx-xxxx
           <br><b>Hours:</b> Monday to Saturday 9AM - 9PM, Sunday 11AM - 5PM</p>
         </div>
 
         <div class="gutter-1-2">
-          <h3>Want to send us a message?</h3>
-          <p>Fill out the fields below</p>
+          <h3 class="tera">Want to send us a message?</h3>
+          <p class="kilo">Fill out the fields below</p>
         </div>
 
         <form class="grid" method="POST" action="https://formspree.io/doug0139@algonquinlive.com">
@@ -112,7 +112,7 @@
 
   <footer role="contentinfo" class="island-1-2">
     <div class="wrapper">
-      <p class="push-0">© Beau's Bonbons 2016</p>
+      <p class="push-0 milli">© Beau's Bonbons 2016</p>
     </div>
   </footer>
 
