--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
 
   <main class="wrapper" role="main" id="main">
     <div class="wrapper embed embed-16by9">
-      <img class="embed-item static push-1-2" src="images/store.jpg" alt="Picture of store's candy displays">
-      <section  class="gutter-1-2" id="about">
+      <img class="embed-item static push-1-2 img-flex" src="images/store.jpg" alt="Picture of store's candy displays">
+      <section class="gutter-1-2" id="about">
         <h2 class="peta">About Us</h2>
         <p class="kilo">For all your local confectionary needs, come to Beau’s Bonbons. Where it be sweet or salty, we’re sure to have what you’re looking for. We have a wide variety of candies to choose from, and here are just a few we have.</p>
       </section>
 
       <figure class="grid">
         <div class="embed embed-16by9 unit [ unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3 unit-xl-1-3 ]">
-          <img class="embed-item static" src="images/candy-2.jpg" alt="Picture of gummy worms">
+          <img class="embed-item static img-flex" src="images/candy-2.jpg" alt="Picture of gummy worms">
         </div>
         <div class="embed embed-16by9 unit [ unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 unit-xl-1-3 ]">
-          <img class="embed-item static" src="images/candy-3.jpg" alt="Picture of candy stars">
+          <img class="embed-item static img-flex" src="images/candy-3.jpg" alt="Picture of candy stars">
         </div>
         <div class="embed embed-16by9 unit [ unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 unit-xl-1-3 ]">
-          <img class="embed-item static" src="images/candy-4.jpg" alt="Picture of gum drops">
+          <img class="embed-item static img-flex" src="images/candy-4.jpg" alt="Picture of gum drops">
         </div>
       </figure>
 
@@ -64,15 +64,13 @@
       </section>
 
       <div class="embed embed-16by9">
-        <img class="embed-item static push-1-2" src="images/owner.jpg" alt="Picture of owner">
+        <img class="embed-item static push-1-2 img-flex" src="images/owner.jpg" alt="Picture of owner">
       </div>
 
       <section id="contact">
         <div class="gutter-1-2">
           <h2 class="peta">Contact</h2>
-          <p class="push-2 kilo"><b>Address:</b> 298 Elgin St, Ottawa, ON
-          <br><b>Phone:</b> 613-xxx-xxxx
-          <br><b>Hours:</b> Monday to Saturday 9AM - 9PM, Sunday 11AM - 5PM</p>
+          <p class="push-2 kilo"><b>Address:</b> 298 Elgin St, Ottawa, ON<br><b>Phone:</b> 613-xxx-xxxx<br><b>Hours:</b> Monday to Saturday 9AM - 9PM, Sunday 11AM - 5PM</p>
         </div>
 
         <div class="gutter-1-2">
@@ -83,10 +81,10 @@
         <form class="grid" method="POST" action="https://formspree.io/doug0139@algonquinlive.com">
           <div class="unit [ unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 unit-xl-1-3 ] push gutter-1-2">
             <label for="name">Name:</label>
-            <input id="name">
+            <input id="name" name="fullname">
           </div>
           <div class="unit [ unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 unit-xl-1-3 ] push gutter-1-2">
-            <label for="email">Email:</label>
+            <label for="email">Email:</label>
             <input id="email" type="email">
           </div>
           <div class="unit [ unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3 unit-xl-1-3 ] push gutter-1-2">
