Removed secondary font

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <section id="contact">
         <div class="gutter-1-2">
           <h2 class="peta">Contact</h2>
-          <p class="push-2 kilo"><b>Address:</b> 298 Elgin St, Ottawa, ON<br><b>Phone:</b> 613-xxx-xxxx<br><b>Hours:</b> Monday to Saturday 9AM - 9PM, Sunday 11AM - 5PM</p>
+          <p class="push-2 kilo">Address: 298 Elgin St, Ottawa, ON<br>Phone: 613-xxx-xxxx<br>Hours: Monday to Saturday 9AM - 9PM, Sunday 11AM - 5PM</p>
         </div>
 
         <div class="gutter-1-2">
